fix(VIconBtn): vertically align middle

--- a/packages/vuetify/src/components/VIconBtn/VIconBtn.scss
+++ b/packages/vuetify/src/components/VIconBtn/VIconBtn.scss
@@ -19,6 +19,7 @@
       transform: rotate(var(--v-icon-btn-rotate, 0deg));
       transition-property: width, height, transform;
       transition: 0.2s settings.$standard-easing;
+      vertical-align: middle;
       width: $icon-btn-width;
     }
 
